--- a/index.html
+++ b/index.html
@@ -1,103 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>Starter Template for Bootstrap</title>
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
 
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <div class="container-fluid">
+<body>
+  <div class="container-fluid">
 
-	<div class="row">
-		<div class="col-md-3">a</div>
-		<div class="col-md-9"><div id="map" style="height:100vh; width:100%;"></div></div>
-	</div>
+    <div class="row">
+      <div class="col-md-3">a</div>
+      <div class="col-md-9">
+        <div id="map" style="height:100vh; width:100%;"></div>
+      </div>
+    </div>
 
-    </div><!-- /.container -->
-    <script>
-      var map;
-      var chicago = {lat: 41.85, lng: -87.65};
+  </div>
+  <!-- /.container -->
+  <script>
+    /* Map Class */
+    function Map() {
+      // CEBU
+      this.defaultLocation = {
+        lat: 10.28,
+        lng: 123.9
+      };
 
-      /**
-       * The CenterControl adds a control to the map that recenters the map on
-       * Chicago.
-       * This constructor takes the control DIV as an argument.
-       * @constructor
-       */
-      function CenterControl(controlDiv, map) {
+      this.googleMap = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: this.defaultLocation
+      });
 
-        // Set CSS for the control border.
-        var controlUI = document.createElement('div');
-        controlUI.style.backgroundColor = '#fff';
-        controlUI.style.border = '2px solid #fff';
-        controlUI.style.borderRadius = '3px';
-        controlUI.style.boxShadow = '0 2px 6px rgba(0,0,0,.3)';
-        controlUI.style.cursor = 'pointer';
-        controlUI.style.marginBottom = '22px';
-        controlUI.style.textAlign = 'center';
-        controlUI.title = 'Click to recenter the map';
-        controlDiv.appendChild(controlUI);
+      this.markers = Array();
+    }
 
-        // Set CSS for the control interior.
-        var controlText = document.createElement('div');
-        controlText.style.color = 'rgb(25,25,25)';
-        controlText.style.fontFamily = 'Roboto,Arial,sans-serif';
-        controlText.style.fontSize = '16px';
-        controlText.style.lineHeight = '38px';
-        controlText.style.paddingLeft = '5px';
-        controlText.style.paddingRight = '5px';
-        controlText.innerHTML = 'Center Map';
-        controlUI.appendChild(controlText);
+    Map.prototype.getZoom = function () {
+      return this.googleMap.getZoom();
+    };
 
-        // Setup the click event listeners: simply set the map to Chicago.
-        controlUI.addEventListener('click', function() {
-          map.setCenter(chicago);
-        });
+    Map.prototype.getCenter = function () {
+      return this.googleMap.getCenter();
+    }
 
+    Map.prototype.getBounds = function () {
+      return this.googleMap.getBounds();
+    }
+
+    Map.prototype.addMarker = function (marker) {
+      this.markers.push(marker);
+      marker.gMarker.setMap(this.googleMap);
+    }
+
+    Map.prototype.clearMarkers = function() {
+      this.markers.forEach(function(marker) {
+        marker.gMarker.setMap(null); 
+      });
+      this.markers = [];
+    }
+
+    /** END OF Map Class **/
+
+
+    function Marker(p) {
+      this.id = p.place_id;
+
+      this.place = p;
+      this.markerConfig = {
+        title: this.place.name,
+        position: this.place.geometry.location,
+        icon: {
+          url: this.place.icon,
+          scaledSize: new google.maps.Size(18, 18)
+        }
+      };
+
+      this.gMarker = new google.maps.Marker(this.markerConfig);
+    }
+
+    function PlacesProvider(map) {
+      this.map = map;
+      this.placesLib = new google.maps.places.PlacesService(map.googleMap);
+    }
+
+    PlacesProvider.prototype.getRequest = function() {
+        return {
+          bounds: this.map.getBounds(),
+          type: 'restaurant'
+        };
+    };
+
+    PlacesProvider.prototype.search = function() {
+        this.placesLib.nearbySearch(this.getRequest(), this.onSearchResult);
+    };
+
+    PlacesProvider.prototype.onSearchResult = function(results, status, pagination) {
+      if (status == google.maps.places.PlacesServiceStatus.OK) {
+        for (var i = 0; i < results.length; i++) {
+          var place = results[i];
+          var marker = new Marker(place);
+          map.addMarker(marker);
+        }
       }
+    }
+    
+    PlacesProvider.prototype.listenToBoundsChange = function() {
+      google.maps.event.addListener(this.map.googleMap, 'bounds_changed', function () {
+        service.search();
+      });
+    }
 
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 12,
-          center: chicago
+    var map;
+    var service;
+
+    function initMap() {
+      map = new Map();
+      
+      service = new PlacesProvider(map);
+      service.listenToBoundsChange();
+
+      /*
+      google.maps.event.addListener(map.googleMap, 'bounds_changed', function(){
+   // Define a rectangle and set its editable property to true.
+        var rectangle = new google.maps.Rectangle({
+          bounds: map.getBounds(),
+          editable: false
         });
+        rectangle.setMap(map.googleMap);
 
-        // Create the DIV to hold the control and call the CenterControl()
-        // constructor passing in this DIV.
-        var centerControlDiv = document.createElement('div');
-        var centerControl = new CenterControl(centerControlDiv, map);
+      });
+      */
 
-        centerControlDiv.index = 1;
-        map.controls[google.maps.ControlPosition.TOP_CENTER].push(centerControlDiv);
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnvAT5xhkQNo1P5mGkJIvDlIBREfUyik&callback=initMap">
-    </script>
-  </body>
+
+    }
+  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnvAT5xhkQNo1P5mGkJIvDlIBREfUyik&callback=initMap&libraries=places">
+  </script>
+</body>
+
 </html>
-
