--- a/index.html
+++ b/index.html
@@ -25,13 +25,136 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+  <style>
+    ul#placesList {
+      margin-top: 20px;
+    }
+
+    ul {
+      padding: 0px;
+    }
+
+    ul>li {
+      list-style: none;
+    }
+
+    .card {
+      font-size: 1em;
+      overflow: hidden;
+      padding: 0;
+      border: none;
+      border-radius: .28571429rem;
+      box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+    }
+
+    .card-block {
+      font-size: 1em;
+      position: relative;
+      margin: 0;
+      padding: 1em;
+      border: none;
+      border-top: 1px solid rgba(34, 36, 38, .1);
+      box-shadow: none;
+    }
+
+    .card-title {
+      font-size: 1.28571429em;
+      font-weight: 700;
+      line-height: 1.2857em;
+    }
+
+    .card-text {
+      clear: both;
+      margin-top: .5em;
+      color: rgba(0, 0, 0, .68);
+    }
+
+    .text-bold {
+      font-weight: 700;
+    }
+
+    .card-footer {
+      font-size: 1em;
+      position: static;
+      top: 0;
+      left: 0;
+      max-width: 100%;
+      padding: .75em 1em;
+      color: rgba(0, 0, 0, .4);
+      border-top: 1px solid rgba(0, 0, 0, .05) !important;
+      background: #fff;
+    }
+
+    .meta {
+      font-size: 1em;
+      color: rgba(0, 0, 0, .4);
+    }
+
+    .meta a {
+      text-decoration: none;
+      color: rgba(0, 0, 0, .4);
+    }
+
+    .meta a:hover {
+      color: rgba(0, 0, 0, .87);
+    }
+
+    .template {
+      display: none;
+    }
+
+    .card .types:after {
+      content: ",";
+    }
+
+    .card .types:last-child:after {
+      content: "";
+    }
+  </style>
 </head>
 
 <body>
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-md-3">a</div>
+      <div class="col-md-3" style="max-height:100vh; overflow-y:scroll;">
+        &nbsp
+        <div class="row">
+          <div class="col-md-12">
+            <input class="btn btn-default btn-block" type="button" value="Draw" id="btnDrawOnMap">
+            <input class="btn btn-default btn-block" type="button" value="Clear" onclick="drawer.undraw(); drawer.clearList();">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div>
+              Restaurants: <span id="restaurantsCount"></span>
+            </div>
+            <ul id="placesList">
+              <li class="template">
+                <div class="card">
+                  <div class="card-block">
+                    <h4 class="card-title">{{name}}</h4>
+                    <div class="meta">
+                      {{vicinity}}
+                    </div>
+                    <div class="card-text">
+                      {{#types}}
+                      <a href="#" class="types">{{.}}</a> {{/types}}
+                    </div>
+                  </div>
+                  <!--
+                  <div class="card-footer">
+                    <span><i class=""></i>75 Friends</span>
+                  </div>
+                  -->
+                </div>
+              </li>
+              <ul>
+          </div>
+        </div>
+      </div>
       <div class="col-md-9">
         <div id="map" style="height:100vh; width:100%;"></div>
       </div>
@@ -39,137 +162,20 @@
 
   </div>
   <!-- /.container -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+  <script src="js/map.js"></script>
   <script>
-    /* Map Class */
-    function Map() {
-      // CEBU
-      this.defaultLocation = {
-        lat: 10.28,
-        lng: 123.9
-      };
-
-      this.googleMap = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
-        center: this.defaultLocation
-      });
-
-      this.markers = Array();
-    }
-
-    Map.prototype.getZoom = function () {
-      return this.googleMap.getZoom();
-    };
-
-    Map.prototype.getCenter = function () {
-      return this.googleMap.getCenter();
-    }
-
-    Map.prototype.getBounds = function () {
-      return this.googleMap.getBounds();
-    }
-
-    Map.prototype.addMarker = function (marker) {
-      this.markers.push(marker);
-      marker.gMarker.setMap(this.googleMap);
-    }
-
-    Map.prototype.clearMarkers = function() {
-      this.markers.forEach(function(marker) {
-        marker.gMarker.setMap(null); 
-      });
-      this.markers = [];
-    }
-
-    /** END OF Map Class **/
-
-
-    function Marker(p) {
-      this.id = p.place_id;
-
-      this.place = p;
-      this.markerConfig = {
-        title: this.place.name,
-        position: this.place.geometry.location,
-        icon: {
-          url: this.place.icon,
-          scaledSize: new google.maps.Size(18, 18)
-        }
-      };
-
-      this.gMarker = new google.maps.Marker(this.markerConfig);
-    }
-
-    /** PlacesProvider Class */
-
-    function PlacesProvider(map) {
-      this.map = map;
-      this.placesLib = new google.maps.places.PlacesService(map.googleMap);
-      this.bindToMap();
-    }
-
-    PlacesProvider.prototype.getRequest = function() {
-        return {
-          bounds: this.map.getBounds(),
-          type: 'restaurant'
-        };
-    };
-
-    PlacesProvider.prototype.search = function() {
-        this.placesLib.nearbySearch(this.getRequest(), this.onSearchResult);
-    };
-
-    PlacesProvider.prototype.onSearchResult = function(results, status, pagination) {
-      if (status == google.maps.places.PlacesServiceStatus.OK) {
-        for (var i = 0; i < results.length; i++) {
-          var place = results[i];
-          var marker = new Marker(place);
-          map.addMarker(marker);
-        }
-      }
-    }
-    
-    PlacesProvider.prototype.bindToMap = function() {
-      google.maps.event.addListener(this.map.googleMap, 'bounds_changed', function () {
-        service.search();
-      });
-    }
-    /** END PlacesProvider */
-
-
-    /** MapDrawer **/
-    function MapDrawer(map) {
-      this.map = map;
-        var rectangle = new google.maps.Rectangle({
-          bounds: map.getBounds(),
-          editable: false
-        });
-        rectangle.setMap(map.googleMap);
-    }
-
-    MapDrawer.prototype.draw = function(){
-
-    }
-
-    /** END MapDrawer **/
-
-
     var map;
     var service;
 
     function initMap() {
       map = new Map();
       service = new PlacesProvider(map);
-
-      /*
-      google.maps.event.addListener(map.googleMap, 'bounds_changed', function(){
-   // Define a rectangle and set its editable property to true.
-
-      });
-      */
-
-
+      drawer = new MapDrawer(map, "#btnDrawOnMap", "#placesList", service);
     }
   </script>
+
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXnvAT5xhkQNo1P5mGkJIvDlIBREfUyik&callback=initMap&libraries=places">
   </script>
 </body>
