hide footer in restaurants list

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       font-weight: 700;
     }
 
+	ul#placesList .card-footer {
+		display:none;
+	}
+
     .card-footer {
       font-size: 1em;
       position: static;
@@ -94,6 +98,7 @@
       padding: .75em 1em;
       color: rgba(0, 0, 0, .4);
       border-top: 1px solid rgba(0, 0, 0, .05) !important;
+	  margin-top:5px;
       background: #fff;
     }
 
